--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/6RkvxXhw7iA?si=0IWoFb5qXbtXKSi2" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/6RkvxXhw7iA?si=_fK0S5d7GjHnPv2T" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
